# spin-api-gateway

./: .cursorrules  Cargo.toml  Makefile  README.md  build.sh  flake.nix  routes.json  rust-toolchain.toml  spin.toml
.cursor/rules/: build-system.mdc  gateway-architecture.mdc  javascript-development.mdc  project-overview.mdc  rust-development.mdc
.github/: copilot-instructions.md
api-gateway/: Cargo.toml  spin.toml
api-gateway/src/: bindings.rs  component_handler.rs  lib.rs  main.rs  routes.rs
api-go/: go.mod  main.go
api-go/bindings/gateway/api/api/: api.wit.go
api-go/bindings/gateway/api/api/guest/: abi.go  guest.exports.go  guest.wasm.go  guest.wit.go
api-go/bindings/gateway/api/api/host/: abi.go  host.wasm.go  host.wit.go
api-go/bindings/gateway/api/http-handler/: http-handler.wit.go
api-js/: componentize.js  index.js  package-lock.json  package.json
api-rs/: Cargo.toml
api1/: Cargo.toml
api1/src/: lib.rs
api1/wit/: world.wit
api2/: Cargo.toml
api2/src/: bindings.rs  lib.rs
api2/wit/: world.wit
src/: lib.rs
wasm/: Cargo.toml
wit/: api2.wit  shared-api.wit  world.wit
