[workspace]
members = ["api-gateway", "api1", "api2"]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
spin-sdk = "4.0.0"
tokio = { version = "1", features = ["full"] }
wit-bindgen = "0.43.0"
wit-component = "0.235.0"
wasmtime = "35.0.0"
wasmtime-wasi = "35.0.0"
wasmtime-wasi-http = "35.0.0"

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true
