[package]
name = "api-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
tokio = { version = "1", features = ["full"] }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
axum = "0.8"
hyper = "1"
warp = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1.10.1"

[build-dependencies]
wit-bindgen = { workspace = true }
